--- a/package.json
+++ b/package.json
@@ -3,9 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "classnames": "^2.2.6",
+    "lodash": "^4.17.15",
+    "moveable": "^0.6.0",
     "react": "^16.8.6",
+    "react-dnd": "^9.3.4",
+    "react-dnd-html5-backend": "^9.3.4",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-moveable": "^0.9.1",
+    "react-scripts": "3.0.1",
+    "react-selectable-fast": "^2.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
